--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -25,5 +26,8 @@
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0",
     "stripe": "^12.3.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3"
   }
 }
